@@ -60,7 +60,8 @@
 //! use fizyr_rpc::{TcpPeer, StreamConfig};
 //!
 //! # async fn foo() -> Result<(), Box<dyn std::error::Error>> {
-//! let mut peer = TcpPeer::connect("localhost:1337", StreamConfig::default()).await?;
+//! let (peer, info) = TcpPeer::connect("localhost:1337", StreamConfig::default()).await?;
+//! eprintln!("Connected to: {}", info.remote_address());
 //! let mut request = peer.send_request(1, &b"Hello World!"[..]).await?;
 //!
 //! while let Some(update) = request.recv_update().await {
