@@ -1,4 +1,5 @@
 # Unreleased
+- [add][major] Provide transport info when spawning peers without giving access to the transport.
 - [add][minor] Add utility functions for working with `RecvMessageError`.
 - [add][minor] Add `Transport::info()` function to get information about a transport.
 - [add][minor] Allow direct access to the underlying `Transport` of a `Peer`.
